-
Bug
-
Resolution: Fixed
-
P3
-
hs25
-
b12
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8063508 | 8u45 | Thomas Schatzl | P3 | Resolved | Fixed | b01 |
| JDK-8040670 | 8u40 | Thomas Schatzl | P3 | Resolved | Fixed | b01 |
| JDK-8070793 | emb-8u47 | Thomas Schatzl | P3 | Resolved | Fixed | team |
When -XX:+ParallelRefProcEnabled is active and run in debug mode G1 crashes with
------------------------------------------------------------------
Internal Error at g1CollectedHeap.hpp:1823, pid=30589, tid=139755213526784
assert(_priority_buffer[pr]->is_retired()) failed: alloc buffers should all retire at this point.
Do you want to debug the problem?
To debug, run 'gdb /proc/30589/exe 30589'; then switch to thread 139755213526784 (0x00007f1b4bdb9700)
Enter 'yes' to launch gdb automatically (PATH must include gdb)
Otherwise, press RETURN to abort...
==============================================================================
during reference processing.
The problem is that after soft reference processing, the allocation buffers are not retired. Unknown impact on product mode, but the possibility of heap "corruption" as the remainders of the allocation buffers are not filled with dummy objects (I think).
I think this issue has been in since G1 supports reference processing during STW pauses (r2720, bug#6484982)
Patch attached.
Preliminary ILW: impact H (assertion failure), likelhood L (needs debug build), workaround M (disable the given switch) -> would be P3, but this only occurs with a debug build, and there have been successful runs without problems on large applications with product builds, so P4 for now
------------------------------------------------------------------
Internal Error at g1CollectedHeap.hpp:1823, pid=30589, tid=139755213526784
assert(_priority_buffer[pr]->is_retired()) failed: alloc buffers should all retire at this point.
Do you want to debug the problem?
To debug, run 'gdb /proc/30589/exe 30589'; then switch to thread 139755213526784 (0x00007f1b4bdb9700)
Enter 'yes' to launch gdb automatically (PATH must include gdb)
Otherwise, press RETURN to abort...
==============================================================================
during reference processing.
The problem is that after soft reference processing, the allocation buffers are not retired. Unknown impact on product mode, but the possibility of heap "corruption" as the remainders of the allocation buffers are not filled with dummy objects (I think).
I think this issue has been in since G1 supports reference processing during STW pauses (r2720, bug#6484982)
Patch attached.
Preliminary ILW: impact H (assertion failure), likelhood L (needs debug build), workaround M (disable the given switch) -> would be P3, but this only occurs with a debug build, and there have been successful runs without problems on large applications with product builds, so P4 for now
- backported by
-
JDK-8040670 G1 does not retire allocation buffers after reference processing work
-
- Resolved
-
-
JDK-8063508 G1 does not retire allocation buffers after reference processing work
-
- Resolved
-
-
JDK-8070793 G1 does not retire allocation buffers after reference processing work
-
- Resolved
-