8028710: G1 does not retire allocation buffers after reference processing work

G1 does not retire allocation buffers after reference processing work when -XX:+ParallelRefProcEnabled is enabled. This causes wrong calculation of PLAB sizes, as the amount of space wasted is not updated correctly.

Reviewed-by: brutisso